--- a/MedicalClinic/nbproject/project.properties
+++ b/MedicalClinic/nbproject/project.properties
@@ -30,12 +30,14 @@ dist.jar=${dist.dir}/MedicalClinic.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jandex-2.0.0.Final.jar=C:\\Users\\Douglas Mezuraro\\Desktop\\jandex-2.0.0.Final.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
     ${libs.hibernate4-persistence.classpath}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.jandex-2.0.0.Final.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
